<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.

  NOTE: 0LeakWhere - the "0" is added for my Nexus4 which appears to
        not allow sorting apps by date added.
        So in order to find this app easily, the 0 puts it in the front
        of the apps list.
-->

<resources>
    <string name="app_name">Motm browser</string>
    <string name="app_title">Molecule Of The Month Browser</string>

    <string name="title_browse">Browse</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>

    <string name="molecule_in_question">molecule in question</string>

    <string name="test_text1">PDBN</string>
    <string name="test_text2">PDB Description goes here. PDB Description goes here. PDB Description goes here. PDB Description goes here. PDB Description goes here.</string>

    <!--Snackbar strings-->
    <string name="snackbar_go_to_3d">3D viewer</string>
    <string name="snackbar_go_to_3d_start">Start</string>

    <!-- CURRENT stuff-->

    <string name="button_next_obj">Next PDB</string>
    <string name="button_prev_obj">Prev PDB</string>
    <string name="button_change_view">Change View</string>
    <string name="button_select">Select</string>

    <!-- toolbar menu stuff -->
    <string name="action_wireframe">Wire frame</string>
    <string name="action_shading">Shading</string>
    <string name="action_hydrogens">Hydros</string>

    <!-- graphics view mode menu stuff -->
    <string name="action_ribbons">Ribbons</string>
    <string name="action_spacefill">Spacefill</string>
    <string name="action_ball_and_stick">Ball and Stick</string>
    <string name="action_stick">Stick</string>
    <string name="action_ribbons_and_balls">Ribbons and Balls</string>
    <string name="action_ca_quick_line">CA quick line</string>

    <!-- menu items and toolbar -->

    <string name="drawer_settings">Settings</string>
    <string name="drawer_section_backstage">More information</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_info">Info and Credits</string>
    <string name="drawer_info_url">http://www.bammellab.com/2016/11/molecule-of-month-android-browsing.html</string>
    <string name="drawer_help_url">http://www.bammellab.com/2016/11/help-page-molecule-of-month-android.html</string>
    <string name="drawer_section_whodunnit">For more information:</string>
    <string name="drawer_whodunnit">RCSB PDB-101</string>
    <string name="drawer_whodunnit_url">http://pdb101.rcsb.org/</string>

    <!--images from github kotmol repo-->

    <string name="images_url_kotmol_repo">https://github.com/kotmol/KotmolMotmImages/blob/master/docs/img/</string>

    <!--  Search fragment strings -->
    <string name="search_recent_header">Recent searches:</string>
    <string name="search_hint">Search Molecules and PDB entries</string>
    <string name="search_no_results_found">No results found</string>
    <string name="search_empty_message">No results found.</string>
    <string name="search_history_empty_title">No recent search entries</string>
    <string name="search_menu_clear_all_history">Clear history</string>
    <string name="search_button_clear_search_string">Click here to clear the search string</string>

    <plurals name="search_results_with_placeholders">
        <item quantity="one">Matches: %d Entry</item>
        <item quantity="other">Matches: %d Entries</item>
    </plurals>

    <string name="search_motm_search_results">Molecule of the Month</string>
    <string name="search_pdb_search_results">Protein Data Bank</string>
    <string name="search_expand_search_results">Press to expand search results</string>
    <string name="search_collapse_search_results">Press to collapse search results</string>


    <!--preferences-->

    <string name="settings_header">Settings</string>

    <string name="settings_one_touch_open">Touch to Open</string>
    <string name="settings_one_touch_open_key">touchtoopen</string>
    <string name="settings_one_touch_open_summary_off">The app asks for confirmation before opening the PDB.</string>
    <string name="settings_one_touch_open_summary_on">The PDB molecule is opened in the 3D viewer immediately.</string>

    <string name="settings_about">Settings Window</string>

    <string name="settings_about_activity">About this app…</string>
    <string name="settings_about_activity_clickme">Click here for more information.</string>

    <string name="settings_playstore">This app in the Play Store…</string>
    <string name="settings_playstore_clickme">Click here to see the Google Play Store listing.</string>
    <string name="settings_playstore_url">https://play.google.com/store/apps/details?id=com.bammellab.motm</string>

    <string name="settings_github_repo">Source code</string>
    <string name="settings_github_about">This app has source code available on Github. Click here to go to Github.</string>
    <string name="settings_github_repo_url">https://github.com/bammellab/MotmBrowser#readme</string>

    <string name="prefs_theme">Theme</string>
    <string name="prefs_theme_key">themekey</string>

    <string name="prefs_theme_default_value">dark</string>
    <string name="prefs_theme_dialog_title">Choose theme</string>
    <string name="prefs_theme_title">Choose theme</string>


    <array name="theme_array_entries">
        <item>Dark</item>
        <item>Light</item>
        <item>Set by Battery Saver</item>
        <item>System Default</item>
    </array>

    <array name="theme_array_entry_values">
        <item>dark</item>
        <item>light</item>
        <item>battery</item>
        <item>system</item>
    </array>

    <!--Content descriptions for accessibility-->
    <string name="content_desc_bammellab_logo">Bammellab logo</string>
    <string name="content_desc_expand_collapse">Expand or collapse section</string>
    <string name="content_desc_empty_search">No recent searches</string>
    <string name="content_desc_app_icon">Application icon</string>
    <string name="content_desc_fastscroll_thumb">Fast scroll handle</string>

    <!--About activity strings-->

    <string name="about">About</string>
    <string name="about_this_app">About this app</string>
    <string name="action_about_activity">About this app</string>
    <string name="title_activity_about">About</string>

    <string name="about_description">Description</string>
    <string name="about_description_text01">
        The Molecule Of The Month Browser is an Android application
        for viewing molecules featured in the RCSB Molecule
        of the Month series.  The information is grouped in the app
        in a manner similar to the grouping on the website
        (a link is below).  The app also provides a 3D
        viewer for directly viewing and manipulating
        the RCSB Protein Data Bank (PDB) molecules referenced
        in the Molecule Of The Month feature.
        The illustrations used in this app originate from
        the original work by David S. Goodsell.
    </string>

    <string name="about_motm">About the Molecule Of The Month:</string>
    <string name="about_motm_url">https://pdb101.rcsb.org/motm/motm-about</string>
    <string name="about_david_goodsell">About David S. Goodsell:</string>
    <string name="about_david_goodsell_url">https://ccsb.scripps.edu/goodsell/</string>
    <string name="about_the_pdb">About the RCSB Protein Data Bank:</string>
    <string name="about_the_pdb_url">http://www.rcsb.org/</string>

    <string name="about_open_source">Source code:</string>
    <string name="about_open_source_description">
        This Android app has source code available on Github. See the following URL:
    </string>
    <string name="about_open_source_url">https://github.com/bammellab/MotmBrowser</string>

    <string name="about_author">Developed by:</string>
    <string name="about_author_contact">bammellab.com</string>

    <string name="about_copyright">Copyright and EULA</string>
    <string name="about_copyright_disclaimer">TERMS AND CONDITIONS FOR USE, REPRODUCTION, AND DISTRIBUTION</string>
    <string name="about_copyright_name">Apache License</string>
    <string name="about_copyright_url">https://raw.githubusercontent.com/bammellab/MotmBrowser/master/LICENSE</string>


</resources>
