<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_browse">

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.bammellab.motm.browse.BrowseFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_browse_viewpager" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.bammellab.motm.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.bammellab.motm.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>